--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
   </div>
   
   <div class="select-wrap">
-    <select>
-      <option value="">Filter by Region</option>
-     
-    </select>
+   <select aria-label="Filter by Region">
+  <option value="">Filter by Region</option>
+</select>
   </div>
 </div>
 
